--- a/C14/examples.html
+++ b/C14/examples.html
@@ -1,4 +1,4 @@
-// CHANGING THE DOCUMENT
+<!-- CHANGING THE DOCUMENT -->
 <p>One</p>
 <p>Two</p>
 <p>Three</p>
@@ -7,12 +7,10 @@
   document.body.insertBefore(paragraphs[2], paragraphs[0]);
 </script>
 
-// CREATING NODES
+<!-- CREATING NODES -->
 <p>The <img src="img/cat.png" alt="Cat"> in the
   <img src="img/hat.png" alt="Hat">.</p>
-
 <p><button onclick="replaceImages()">Replace</button></p>
-
 <script>
   function replaceImages() {
     let images = document.body.getElementsByTagName("img");
@@ -24,4 +22,27 @@
       }
     }
   }
+</script>
+
+<!-- ATTRIBUTES -->
+<p data-classified="secret">The launch code is 00000000.</p>
+<p data-classified="unclassified">I have two feet.</p>
+
+<script>
+  let paras = document.body.getElementsByTagName("p");
+  for (let para of Array.from(paras)) {
+    if (para.getAttribute("data-classified") == "secret") {
+      para.remove();
+    }
+  }
+</script>
+
+<!-- LAYOUT -->
+<p style="border: 3px solid red">
+  I'm boxed in
+</p>
+<script>
+  let para = document.body.getElementsByTagName("p")[0];
+  console.log("clientHeight:", para.clientHeight);
+  console.log("offsetHeight:", para.offsetHeight);
 </script>
