--- a/C14/examples.html
+++ b/C14/examples.html
@@ -46,3 +46,11 @@
   console.log("clientHeight:", para.clientHeight);
   console.log("offsetHeight:", para.offsetHeight);
 </script>
+
+<!-- STYLING -->
+<p><a href=".">Normal link</a></p>
+<p><a href="." style="color: green">Green link</a></p>
+
+This text is displayed <strong>inline</strong>,
+<strong style="display: block">as a block</strong>, and
+<strong style="display: none">not at all</strong>.
