Add cascading styles

--- a/C14/examples.html
+++ b/C14/examples.html
@@ -53,4 +53,13 @@
 
 This text is displayed <strong>inline</strong>,
 <strong style="display: block">as a block</strong>, and
-<strong style="display: none">not at all</strong>.
+<strong style="display: none">not at all</strong>
+
+<!-- CASCADING STYLES -->
+<style>
+  strong {
+    font-style: italic;
+    color: gray;
+  }
+</style>
+<p>Now <strong>strong text</strong> is italic and gray.</p>
