--- a/C15/examples.html
+++ b/C15/examples.html
@@ -44,3 +44,28 @@
     if (event.button == 2) event.stopPropagation();
   });
 </script>
+
+<!-- DEFAULT ACTIONS -->
+<a href="https://developer.mozilla.org/">MDN</a>
+<script>
+  let link = document.querySelector("a");
+  link.addEventListener("click", event => {
+    console.log("Nope.");
+    event.preventDefault();
+  });
+</script>
+
+<!-- KEY EVENTS -->
+<p>This page turns violet when you hold the V key.</p>
+<script>
+  window.addEventListener("keydown", event => {
+    if (event.key == "v") {
+      document.body.style.background = "violet";
+    }
+  });
+  window.addEventListener("keyup", event => {
+    if (event.key == "v") {
+      document.body.style.background = "";
+    }
+  });
+</script>
