--- a/C15/examples.html
+++ b/C15/examples.html
@@ -167,3 +167,22 @@
     bar.style.width = `${(pageYOffset / max) * 100}%`;
   });
 </script>
+
+<!-- FOCUS EVENTS -->
+<p>Name: <input type="text" data-help="Your full name"></p>
+<p>Age: <input type="text" data-help="Your age in years"></p>
+<p id="help"></p>
+
+<script>
+  let help = document.querySelector("#help");
+  let fields = document.querySelectorAll("input");
+  for (let field of Array.from(fields)) {
+    field.addEventListener("focus", event => {
+      let text = event.target.getAttribute("data-help");
+      help.textContent = text;
+    });
+    field.addEventListener("blur", event => {
+      help.textContent = "";
+    });
+  }
+</script>
