--- a/C15/examples.html
+++ b/C15/examples.html
@@ -186,3 +186,12 @@
     });
   }
 </script>
+
+<!-- TIMERS -->
+let bombTimer = setTimeout(() => {
+  console.log("BOOM!");
+}, 500);
+if (Math.random() < 0.5) { // 50% chance
+  console.log("Defused.");
+  clearTimeout(bombTimer);
+}
