--- a/C15/examples.html
+++ b/C15/examples.html
@@ -195,3 +195,14 @@ if (Math.random() < 0.5) { // 50% chance
   console.log("Defused.");
   clearTimeout(bombTimer);
 }
+
+<!-- DEBOUNCING -->
+<textarea>Type something here...</textarea>
+<script>
+  let textarea = document.querySelector("textarea");
+  let timeout;
+  textarea.addEventListener("input", () => {
+    clearTimeout(timeout);
+    timeout = setTimeout(() => console.log("Typed!"), 500);
+  });
+</script>
