--- a/C17/examples.html
+++ b/C17/examples.html
@@ -16,3 +16,13 @@
   context.fillStyle = "red";
   context.fillRect(10, 10, 100, 50);
 </script>
+
+<!-- LINES AND SURFACES -->
+<canvas></canvas>
+<script>
+  let cx = document.querySelector("canvas").getContext("2d");
+  cx.strokeStyle = "blue";
+  cx.strokeRect(5, 5, 50, 50);
+  cx.lineWidth = 5;
+  cx.strokeRect(135, 5, 50, 50);
+</script>
