--- a/C17/examples.html
+++ b/C17/examples.html
@@ -113,3 +113,14 @@ const results = [
     cx.fill();
   }
 </script>
+
+<!-- TRANSFORMATION -->
+<canvas></canvas>
+<script>
+  let cx = document.querySelector("canvas").getContext("2d");
+  cx.scale(3, .5);
+  cx.beginPath();
+  cx.arc(50, 50, 40, 0, 7);
+  cx.lineWidth = 3;
+  cx.stroke();
+</script>
