--- a/C17/examples.html
+++ b/C17/examples.html
@@ -124,3 +124,22 @@ const results = [
   cx.lineWidth = 3;
   cx.stroke();
 </script>
+
+<!-- STORING AND CLEARING TRANSFORMATIONS -->
+<canvas width="600" height="300"></canvas>
+<script>
+  let cx = document.querySelector("canvas").getContext("2d");
+  function branch(length, angle, scale) {
+    cx.fillRect(0, 0, 1, length);
+    if (length < 8) return;
+    cx.save();
+    cx.translate(0, length);
+    cx.rotate(-angle);
+    branch(length * scale, angle, scale);
+    cx.rotate(2 * angle);
+    branch(length * scale, angle, scale);
+    cx.restore();
+  }
+  cx.translate(300, 0);
+  branch(60, 0.5, 0.8);
+</script>
