--- a/C18/examples.html
+++ b/C18/examples.html
@@ -27,3 +27,16 @@
 <!-- DISABLED FIELDS -->
 <button>I'm all right</button>
 <button disabled>I'm out</button>
+
+<!-- THE FORM AS A WHOLE -->
+<form action="example/submit.html">
+  Name: <input type="text" name="name"><br>
+  Password: <input type="password" name="password"><br>
+  <button type="submit">Log in</button>
+</form>
+<script>
+  let form = document.querySelector("form");
+  console.log(form.elements[1].type);
+  console.log(form.elements.password.type);
+  console.log(form.elements.name.form == form);
+</script>
