--- a/C18/examples.html
+++ b/C18/examples.html
@@ -61,3 +61,34 @@
     field.selectionEnd = from + word.length;
   }
 </script>
+
+<!-- CHECKBOXES AND RADIO BUTTONS -->
+<label>
+  <input type="checkbox" id="purple"> Make this page purple
+</label>
+<script>
+  let checkbox = document.querySelector("#purple");
+  checkbox.addEventListener("change", () => {
+    document.body.style.background =
+      checkbox.checked ? "mediumpurple" : "";
+  });
+</script>
+
+Color:
+<label>
+  <input type="radio" name="color" value="orange"> Orange
+</label>
+<label>
+  <input type="radio" name="color" value="lightgreen"> Green
+</label>
+<label>
+  <input type="radio" name="color" value="lightblue"> Blue
+</label>
+<script>
+  let buttons = document.querySelectorAll("[name=color]");
+  for (let button of Array.from(buttons)) {
+    button.addEventListener("change", () => {
+      document.body.style.background = button.value;
+    });
+  }
+</script>
